--- a/Model_Search.ipynb
+++ b/Model_Search.ipynb
@@ -28,168 +28,21 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###GET DATA\n",
-    "df = pd.read_csv('scaled.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pregnancies</th>\n",
-       "      <th>Glucose</th>\n",
-       "      <th>BloodPressure</th>\n",
-       "      <th>SkinThickness</th>\n",
-       "      <th>Insulin</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>DiabetesPedigreeFunction</th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.367647</td>\n",
-       "      <td>0.719347</td>\n",
-       "      <td>0.581148</td>\n",
-       "      <td>0.368182</td>\n",
-       "      <td>0.194613</td>\n",
-       "      <td>0.500671</td>\n",
-       "      <td>0.260974</td>\n",
-       "      <td>0.485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.102941</td>\n",
-       "      <td>0.434422</td>\n",
-       "      <td>0.536885</td>\n",
-       "      <td>0.313636</td>\n",
-       "      <td>0.104647</td>\n",
-       "      <td>0.406781</td>\n",
-       "      <td>0.154910</td>\n",
-       "      <td>0.200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.473529</td>\n",
-       "      <td>0.877638</td>\n",
-       "      <td>0.522131</td>\n",
-       "      <td>0.184967</td>\n",
-       "      <td>0.148408</td>\n",
-       "      <td>0.362519</td>\n",
-       "      <td>0.278266</td>\n",
-       "      <td>0.215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.102941</td>\n",
-       "      <td>0.452513</td>\n",
-       "      <td>0.536885</td>\n",
-       "      <td>0.259091</td>\n",
-       "      <td>0.150000</td>\n",
-       "      <td>0.426900</td>\n",
-       "      <td>0.084202</td>\n",
-       "      <td>0.050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>0.669598</td>\n",
-       "      <td>0.345082</td>\n",
-       "      <td>0.368182</td>\n",
-       "      <td>0.228723</td>\n",
-       "      <td>0.628092</td>\n",
-       "      <td>0.899274</td>\n",
-       "      <td>0.230</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Pregnancies   Glucose  BloodPressure  SkinThickness   Insulin       BMI  \\\n",
-       "0     0.367647  0.719347       0.581148       0.368182  0.194613  0.500671   \n",
-       "1     0.102941  0.434422       0.536885       0.313636  0.104647  0.406781   \n",
-       "2     0.473529  0.877638       0.522131       0.184967  0.148408  0.362519   \n",
-       "3     0.102941  0.452513       0.536885       0.259091  0.150000  0.426900   \n",
-       "4     0.050000  0.669598       0.345082       0.368182  0.228723  0.628092   \n",
-       "\n",
-       "   DiabetesPedigreeFunction    Age  \n",
-       "0                  0.260974  0.485  \n",
-       "1                  0.154910  0.200  \n",
-       "2                  0.278266  0.215  \n",
-       "3                  0.084202  0.050  \n",
-       "4                  0.899274  0.230  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels = df['Outcome']\n",
-    "df.drop(['Outcome'], inplace = True, axis = 1)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = [1 if i == .95 else 0 for i in labels]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert(len(labels) == len(df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, x_test = np.array(df[:623]), np.array(df[623:])\n",
-    "y_train, y_test = np.array(labels[:623]), np.array(labels[623:])"
+    "#df = pd.read_csv('scaled.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_df = pd.DataFrame()"
@@ -197,57 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Unnamed: 0', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9',\n",
-       "       '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20',\n",
-       "       '21', '22', '23', '24', '25', '26', '27'], dtype=object)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.columns.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##CHURN\n",
-    "col_names = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9',\n",
-    "       '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20',\n",
-    "       '21', '22', '23', '24', '25', '26', '27']\n",
-    "X = pd.read_csv('churn_features.csv')\n",
-    "Y = pd.read_csv('churn_labels.csv')\n",
-    "y = Y['0'].copy()\n",
-    "x = X[col_names].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "##CHURN\n",
-    "x_train, x_test = np.array(x[:6000]), np.array(x[6000:])\n",
-    "y_train, y_test = np.array(y[:6000]), np.array(y[6000:])"
+    "split = 6000\n",
+    "x_train, x_test = np.array(x[:split]), np.array(x[split:])\n",
+    "y_train, y_test = np.array(y[:split]), np.array(y[split:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "search_space = {\n",
@@ -307,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def random_model_search(num_models, best_score, num):\n",
@@ -365,19 +186,18 @@
     "    \n",
     "        r_model.load_weights('churn_weights_r.hdf5')\n",
     "        \n",
+    "        #Best model ROC/AUC\n",
     "        #new_preds = r_model.predict(x_test)\n",
     "        #new_pred = (new_preds > 0.5).astype('int')\n",
     "        #new_score = roc_auc_score(y_test, new_pred)\n",
     "        \n",
+    "        #Best model ACC\n",
     "        new_score = r_model.evaluate(x_test, y_test)\n",
     "        new_score = new_score[1]\n",
-    "        #print(new_score)\n",
     "        model_dict['score'] = new_score\n",
     "        \n",
     "        #compare to best score, if best, store model\n",
-    "        #print('New Score:{}, Best Score:{}' .format(new_score, best_score))\n",
     "        if new_score >= best_score:\n",
-    "            #print('saving model')\n",
     "            r_model.save('churn_model.h5' .format(num))  \n",
     "            best_score = new_score\n",
     "        del r_model\n",
@@ -391,20 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sorted_df = new_df.sort_values(by = 'score')\n",
-    "#tail_df = sorted_df.tail(15).copy()\n",
-    "#tail_df.tail(15)\n",
-    "#sorted_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_new_dists():\n",
@@ -431,44 +241,15 @@
     "                y = orig - ((orig-new)*lr)\n",
     "                new_dist.append(y)  \n",
     "            dists[i] = new_dist\n",
-    "    return dists\n",
-    "            \n",
-    "#start_probs = get_new_dists()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#start_probs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(new_df)"
+    "    return dists"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_model():\n",
@@ -625,7 +406,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_model = load_model('churn_model.h5')"
@@ -695,7 +478,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#new_df.tail(20)"
@@ -1126,18 +911,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#total_scores = new_df['score']\n",
-    "#total_scores.rolling(window=3).mean().plot();"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1158,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
